# BEARlist

./: Activity_View.cpp  Activity_View.h  CMakeLists.txt  Controller.cpp  Controller.h  Date.cpp  Date.h  Detail_View.cpp  Detail_View.h  Exception.cpp  Exception.h  Intro_img.cpp  Intro_img.h  List_View.cpp  List_View.h  Model.cpp  Model.h  Observer.h  Principal_List_View.cpp  Principal_List_View.h  Principal_View.cpp  Principal_View.h  Subject.h  Task.cpp  Task.h  main.cpp  savedlist salvataggio.txt  savedlist.txt  savedlist_salvataggio.txt
test/: CMakeLists.txt  Fake_View.h  runAllTests.cpp  test.cpp  testfixture.cpp
test/lib/googletest/: CMakeLists.txt
